--- a/scala/web/chat/app/views/main.scala.html
+++ b/scala/web/chat/app/views/main.scala.html
@@ -17,7 +17,7 @@
 <body>
     <section id="top">
         <div class="wrapper">
-            <h1>Play Hello World Web Tutorial</h1>
+            <h1>Simple Chat</h1>
         </div>
     </section>
     @content
