--- a/scala/web/chat/app/views/list.scala.html
+++ b/scala/web/chat/app/views/list.scala.html
@@ -14,6 +14,7 @@
                 <li>
                     <div>Description @chatRoom.description</div>
                     <div>Created @chatRoom.created_time</div>
+                    <div><a href="/rooms/@chatRoom.room_id">Join</a></div>
                 </li>
             }
         </ul>
