Add echo back of chat

--- a/scala/web/chat/app/views/room.scala.html
+++ b/scala/web/chat/app/views/room.scala.html
@@ -5,7 +5,13 @@
 
 <section id="content">
     <div class="wrapper doc">
+        <textarea id="submitText"></textarea>
+        <button id="submitButton">send</button>
+        <hr />
+        <ul id="postList">
+        </ul>
     </div>
 </section>
+<script src="@routes.Assets.versioned("javascripts/Chat.js")" type="text/javascript"></script>
 }
 }
